--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,9 +20,9 @@
                     <input type="submit" name="login" class="login loginmodal-submit" value="Login" *ngIf="loginForm.form.valid === true">
                 </form>
 
-                <div class="login-help">
+                <!-- <div class="login-help">
                     <a (click)="register()">Registrar</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
