--- a/src/app/bonds/emitir/emitirBono.component.html
+++ b/src/app/bonds/emitir/emitirBono.component.html
@@ -5,7 +5,7 @@
             <h3 style="margin-bottom: 25px; text-align: center;">Emitir Bono</h3>
             <div class="form-group">
                 {{labels.emitirBono.fecha}}
-                <input type="datetime" class="form-control" id="fecha" name="fecha" [(ngModel)]="bond.creationDate" placeholder="Fecha" required>
+                <input type="date" class="form-control" id="fecha" name="fecha" [(ngModel)]="bond.creationDate" placeholder="Fecha" required>
             </div>
             <div class="form-group">
                 {{labels.emitirBono.valor}}
