--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,11 +18,11 @@
                 <ul class="nav navbar-nav">
                     <li>
                         <a (click)="emitirBono()">
-                            <span class="glyphicon glyphicon-link"></span> Emitir Bono</a>
+                            <span class="glyphicon glyphicon-pencil"></span> Emitir Bono</a>
                     </li>
                     <li>
                         <a (click)="adquirirBono()">
-                            <span class="glyphicon glyphicon-link"></span> Adquirir Bono</a>
+                            <span class="glyphicon glyphicon-gift"></span> Adquirir Bono</a>
                     </li>
                     <li>
                         <a (click)="consultarBonos()">
@@ -30,7 +30,7 @@
                     </li>
                     <li>
                         <a (click)="pagarBonos()">
-                            <span class="glyphicon glyphicon-link"></span> Pagar Bonos</a>
+                            <span class="glyphicon glyphicon-eur"></span> Pagar Bonos</a>
                     </li>
                 </ul>
             </div>
