--- a/src/app/bonds/pagar/pagarBono.component.html
+++ b/src/app/bonds/pagar/pagarBono.component.html
@@ -2,32 +2,37 @@
   <div class="col-md-5">
     <div class="form-area">
       <br style="clear:both">
-      <h3 style="margin-bottom: 25px; text-align: left;">Pagar Bono</h3>
-      <div class="form-group">
-        {{labels.pagarBono.fecha}}
-        <input type="datetype" class="form-control" id="fecha" name="fecha" [(ngModel)]="bond.creationDate" placeholder="Fecha" readonly
-          required>
-      </div>
-      <div class="form-group">
-        {{labels.pagarBono.valor}}
-        <input type="number" class="form-control" id="valor" name="valor" [(ngModel)]="bond.amount" placeholder="Valor" readonly
-          required>
-      </div>
-      <div class="form-group">
-        {{labels.pagarBono.interes}}
-        <input type="number" class="form-control" id="interes" name="interes" placeholder="Interés" readonly value="0.1">
-      </div>
-      <div class="form-group">
-        {{labels.pagarBono.total}}
-        <input type="number" class="form-control" id="total" name="total" [(ngModel)]="totalPay" placeholder="Total a Pagar" readonly>
+      <h3 style="margin-bottom: 25px; text-align: left;">Pago de Bonos</h3>
+
+      <div *ngIf="bonusSelected">Por favor selecciona un bono</div>
+
+      <div *ngIf="bonusSelected == false" class="panel panel-default mb-3">
+        <div class="panel-heading">Pagar Bono</div>
+        <div class="panel-body">
+          <ul class="list-group list-group-flush">
+                <li class="list-group-item"> <span class="glyphicon glyphicon-eur" aria-hidden="true"></span> Valor: {{bond.amount}}</li>
+            
+            <li class="list-group-item">
+                    <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span> Interes: 0.1%</li>
+            <li class="list-group-item">
+                    <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Fecha: {{bond.creationDate | date:'shortDate'}}</li>
+            <li class="list-group-item">
+                    <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>     Total: {{totalPay}}</li>
+          </ul>
+        </div>
+        <div class="panel-footer">
+          <div class="form-group row">
+            <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" (click)="pagarBono()">
+                                                <span class="glyphicon glyphicon-eur" aria-hidden="true"></span> Pagar</button>
+
+            <button type="button" id="cancel" name="cancel" class="btn btn-secondary pull-right" (click)="goToBondslist()">Cancelar</button>
+
+          </div>
+        </div>
       </div>
 
-      <div class="form-group row">
-        <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" (click)="pagarBono()">
-                    <button type="button" id="cancel" name="cancel" class="btn btn-secondary pull-right" (click)="goToBondslist()">Cancelar</button>
-        <span class="glyphicon glyphicon-eur" aria-hidden="true"></span> Pagar</button>
-      </div>
-    </div>
+  
+        </div>
   </div>
 
 </div>
