--- a/src/app/bonds/adquirir/adquirirBono.component.html
+++ b/src/app/bonds/adquirir/adquirirBono.component.html
@@ -25,7 +25,7 @@
                     <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Cancelar</button>
                 </div>
                 <div class="col-sm-2 col-sm-offset-3">
-                    <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Adquirir</button>
+                    <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" (click) = "adquirirBono()">Adquirir</button>
                 </div>
             </div>
         </div>
