--- a/src/app/bonds/adquirir/adquirirBono.component.html
+++ b/src/app/bonds/adquirir/adquirirBono.component.html
@@ -1,29 +1,29 @@
 <div class="container">
-    <div class="col-md-5">
+    <div class="col-md-5 col-md-offset-2">
         <div class="form-area">
             <br style="clear:both">
             <h3 style="margin-bottom: 25px; text-align: center;">Adquirir Bono</h3>
             
             <div class="form-group">
                 {{labels.adquirirBono.fecha}}
-                <input type="datetime" class="form-control" id="fecha" name="fecha" [(ngModel)]="bond.creationDate" placeholder="Fecha" required>
+                <input type="datetime" class="form-control" id="fecha" name="fecha" [ngModel]="bond.creationDate | date:'shortDate'" placeholder="Fecha" readonly>
             </div>
             <div class="form-group">
                 {{labels.adquirirBono.valor}}
-                <input type="number" class="form-control" id="valor" name="valor" [(ngModel)]="bond.amount" placeholder="Valor" required>
+                <input type="number" class="form-control" id="valor" name="valor" [(ngModel)]="bond.amount" placeholder="Valor" readonly>
             </div>
             <div class="form-group">
                 {{labels.adquirirBono.interes}}
-                <input type="number" class="form-control" id="interes" name="interes" placeholder="Interés" readonly value="0.1">
+                <input type="text" class="form-control" id="interes" name="interes" placeholder="Interés" readonly value="10%">
             </div>
             <div class="form-group">
                 {{labels.adquirirBono.plazo}}
-                <input type="number" class="form-control" id="plazo" name="plazo" [(ngModel)]="bond.installments" placeholder="Plazo" readonly>
+                <input type="number" class="form-control" id="plazo" name="plazo" [(ngModel)]="bond.installments" placeholder="Plazo" value="3" readonly>
             </div>
 
             <div class="form-group row">
                 <div class="col-sm-2 col-sm-offset-3">
-                    <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Cancelar</button>
+                    <button type="button" id="submit" name="submit" class="btn btn-primary pull-right"(click)="cancelar()">Cancelar</button>
                 </div>
                 <div class="col-sm-2 col-sm-offset-3">
                     <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" (click) = "adquirirBono()">Adquirir</button>
