--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,9 @@
-<input type="button" id="login" name="login" class="login loginmodal-submit" value="Login" (click)="logIn()" >
+<input type="button" id="login" name="login" class="login loginmodal-submit" value="Login" (click)="logIn()">
+<div *ngIf="googleService.isSignedIn">
+    <li>
+        <a>{{name}}</a>
+    </li>
+    <li>
+        <img src="{{image}}" style="width:50px; height:50px; border-radius: 100px">
+    </li>
+</div>
