--- a/src/app/bonds/emitir/emitirBono.component.html
+++ b/src/app/bonds/emitir/emitirBono.component.html
@@ -5,11 +5,19 @@
             <h3 style="margin-bottom: 25px; text-align: center;">Emitir Bono</h3>
             <div class="form-group">
                 {{labels.emitirBono.fecha}}
-                <input type="date" class="form-control" id="fecha" name="fecha" [(ngModel)]="bond.creationDate" placeholder="Fecha" required>
+                <input type="date" class="form-control" id="fecha" name="fecha" [(ngModel)]="bond.creationDate" pdelaceholr="Fecha" required>
             </div>
             <div class="form-group">
                 {{labels.emitirBono.valor}}
-                <input type="number" class="form-control" id="valor" name="valor" [(ngModel)]="bond.amount" placeholder="Valor" required>
+                <input type="number" class="form-control" id="valor" name="valor" [(ngModel)]="bond.amount" pdelaceholr="Valor Bono" readonly >
+            </div>
+            <div class="form-group">
+                {{labels.adquirirBono.interes}}
+                <input type="text" class="form-control" id="interes" name="interes" [(ngModel)]="bond.interest" placeholder="Interés" readonly value="10%">
+            </div>
+            <div class="form-group">
+                {{labels.adquirirBono.plazo}}
+                <input type="number" class="form-control" id="plazo" name="plazo" [(ngModel)]="bond.installments" placeholder="Plazo" value="1" readonly>
             </div>
 
             <div class="form-group row">
