--- a/src/app/bonds/consultar/consultarBonos.component.html
+++ b/src/app/bonds/consultar/consultarBonos.component.html
@@ -9,7 +9,7 @@
             <div class="container">
                     <div class="form-group row">
                 <div class="col-md-2 col-sm-offset-1">
-                    <button type="button" id="emitidos" name="emitidos" (click)="find('emitidos')" class="btn btn-primary pull-right">Bonos emitidos</button>
+                    <button type="button" id="emitidos" name="emitidos" (click)="find('emitidos')" class="btn btn-primary pull-right">Bonos disponibles</button>
                 </div>
                 <div class="col-md-2 col-sm-offset-1">
                     <button type="button" id="adquiridos" name="adquiridos" (click)="find('adquiridos')" class="btn btn-primary pull-right">Bonos adquiridos</button>
