--- a/src/app/bonds/emitir/emitirBono.component.html
+++ b/src/app/bonds/emitir/emitirBono.component.html
@@ -5,11 +5,11 @@
             <h3 style="margin-bottom: 25px; text-align: center;">Emitir Bono</h3>
             <div class="form-group">
                 {{labels.emitirBono.fecha}}
-                <input type="date" class="form-control" id="fecha" name="fecha" [(ngModel)]="bond.creationDate" pdelaceholr="Fecha" required>
+                <input type="datetime" class="form-control" id="fecha" name="fecha" [ngModel]="bond.creationDate | date:'shortDate'" placeholder="Fecha" readonly>
             </div>
             <div class="form-group">
                 {{labels.emitirBono.valor}}
-                <input type="number" class="form-control" id="valor" name="valor" [(ngModel)]="bond.amount" pdelaceholr="Valor Bono" readonly >
+                <input type="number" class="form-control" id="valor" name="valor" [(ngModel)]="bond.amount" placeholder="Valor Bono" readonly >
             </div>
             <div class="form-group">
                 {{labels.adquirirBono.interes}}
