--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,97 +1,93 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto);
+@import url(http://weloveiconfonts.com/api/?family=brandico|entypo|openwebicons|zocial);
 
-    /****** LOGIN MODAL ******/
+/* brandico */
+[class*="brandico-"]:before {
+  font-family: 'brandico', sans-serif;
+}
 
-    .loginmodal-container {
-        padding: 30px;
-        max-width: 350px;
-        width: 100% !important;
-        background-color: #F7F7F7;
-        margin: 0 auto;
-        border-radius: 2px;
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-        overflow: hidden;
-        font-family: roboto;
-    }
+/* entypo */
+[class*="entypo-"]:before {
+  font-family: 'entypo', sans-serif;
+}
 
-    .loginmodal-container h1 {
-        text-align: center;
-        font-size: 1.8em;
-        font-family: roboto;
-    }
+/* openwebicons */
+[class*="openwebicons-"]:before {
+  font-family: 'OpenWeb Icons', sans-serif;
+}
 
-    .loginmodal-container input[type=submit] {
-        width: 100%;
-        display: block;
-        margin-bottom: 10px;
-        position: relative;
-    }
+/* zocial */
+[class*="zocial-"]:before {
+  font-family: 'zocial', sans-serif;
+}
 
-    .loginmodal-container input[type=email],
-    input[type=password] {
-        height: 44px;
-        font-size: 16px;
-        width: 100%;
-        margin-bottom: 10px;
-        -webkit-appearance: none;
-        background: #fff;
-        border-radius: 2px;
-        padding: 0 8px;
-        box-sizing: border-box;
-        -moz-box-sizing: border-box;
-    }
+.form-signin{
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
+}
 
-    .loginmodal-container input[type=text]:hover,
-    input[type=password]:hover {
-        border: 1px solid #b9b9b9;
-        border-top: 1px solid #a0a0a0;
-        -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-        -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-        box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-    }
 
-    .loginmodal {
-        text-align: center;
-        font-size: 14px;
-        font-family: 'Arial', sans-serif;
-        font-weight: 700;
-        height: 36px;
-        padding: 0 8px;
-        /* border-radius: 3px; */
-        /* -webkit-user-select: none;
-  user-select: none; */
-    }
+.login-input {
+  margin-bottom: -1px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.login-input-pass {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
 
-    .loginmodal-submit {
-        /* border: 1px solid #3079ed; */
-        border: 0px;
-        color: #fff;
-        text-shadow: 0 1px rgba(0, 0, 0, 0.1);
-        background-color: #4d90fe;
-        padding: 17px 0px;
-        font-family: roboto;
-        font-size: 14px;
-        /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#4787ed)); */
-    }
 
-    .loginmodal-submit:hover {
-        /* border: 1px solid #2f5bb7; */
-        border: 0px;
-        text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-        background-color: #357ae8;
-        /* background-image: -webkit-gradient(linear, 0 0, 0 100%,   from(#4d90fe), to(#357ae8)); */
-    }
+.signup-input {
+  margin-bottom: -1px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
 
-    .loginmodal-container a {
-        text-decoration: none;
-        color: #666;
-        font-weight: 400;
-        text-align: center;
-        display: inline-block;
-        opacity: 0.6;
-        transition: opacity ease 0.5s;
-    }
+.signup-input-confirm {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
 
-    .login-help {
-        font-size: 12px;
-    }
+
+.form-signin .form-control {
+  position: relative;
+  font-size: 16px;
+  height: auto;
+  padding: 10px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.btn-center{
+  width: 50%;
+  text-align: center;
+  margin: inherit;
+}
+
+.social-login-btn {
+  margin: 5px;
+  width: 20%;
+  font-size: 250%;
+  padding: 0;
+}
+
+.social-login-more {
+  width: 45%;
+}
+
+.social-google {
+  background-color: #da573b;
+  border-color: #be5238;
+}
+.social-google:hover{
+  background-color: #be5238;
+  border-color: #9b4631;
+}
+
+
+
+
