autenticación de servicios con token

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,14 +7,20 @@
     <script id="metamorph-1-start" type="text/x-placeholder"></script>
     <script id="metamorph-21-start" type="text/x-placeholder"></script>
 
-    <div class="container text-center">
-        <div class="form-signin" data-ember-action="2">
+    <div class="container text-center row">
+        <br>
+        <br>
+        <div class="col-md-6" style="text-align: right !important">
+            <img src="../../i-o.jpg" style="width:200px; height:150px">
+        </div>
+        <div class="col-md-6" style="text-align: left !important" data-ember-action="2">
+
             <h2 class="form-signin-heading">Prestamos BlockChain</h2>
 
             <small class="text-muted">Conéctate usando tu cuenta de google</small>
             <br>
             <br>
-          
+
             <p>
                 <a class="btn btn-primary social-login-btn social-google" (click)="logIn()">
                     <i class="fa fa-google-plus"></i>
