--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -8,23 +8,23 @@
     <script id="metamorph-21-start" type="text/x-placeholder"></script>
 
     <div class="container text-center row">
-        <br>
-        <br>
-        <div class="col-md-6" style="text-align: right !important">
-            <img src="../../i-o.jpg" style="width:200px; height:150px">
+
+        <div class="col-md-6" style="top:30px;">
+            <img src="../../i-o.jpg">
         </div>
-        <div class="col-md-6" style="text-align: left !important" data-ember-action="2">
+        <div class="col-md-6" data-ember-action="2" style="top:150px">
+            <div>
+                <h2 class="form-signin-heading" style="color:#da573b">Prestamos BlockChain</h2>
 
-            <h2 class="form-signin-heading">Prestamos BlockChain</h2>
+                <small class="text-muted">Conéctate usando tu cuenta de google</small>
+                <br>
+                <br>
 
-            <small class="text-muted">Conéctate usando tu cuenta de google</small>
-            <br>
-            <br>
-
-            <p>
-                <a class="btn btn-primary social-login-btn social-google" (click)="logIn()">
-                    <i class="fa fa-google-plus"></i>
-                </a>
-            </p>
+                <p>
+                    <a class="btn btn-primary social-login-btn social-google" (click)="logIn()" style="height: 40px;width: 80px;">
+                        <i class="fa fa-google-plus"></i>
+                    </a>
+                </p>
+            </div>
         </div>
     </div>
