--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,9 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
+
+.btn-primary {
+  color: #fff;
+  background-color: #da573b!important;
+  border-color: #ca4f37!important;
+}
