corrección de flujos

--- a/src/app/bonds/adquirir/adquirirBono.component.html
+++ b/src/app/bonds/adquirir/adquirirBono.component.html
@@ -23,10 +23,14 @@
 
             <div class="form-group row">
                 <div class="col-sm-2 col-sm-offset-3">
-                    <button type="button" id="submit" name="submit" class="btn btn-primary pull-right"(click)="cancelar()">Cancelar</button>
+                    <button type="button" id="submit" name="submit" class="btn btn-secondary pull-right"(click)="cancelar()">
+                        <span class="glyphicon glyphicon-remove"></span>
+                        Cancelar</button>
                 </div>
                 <div class="col-sm-2 col-sm-offset-3">
-                    <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" (click) = "adquirirBono()">Adquirir</button>
+                    <button type="button" id="submit" name="submit" class="btn btn-primary pull-right" (click) = "adquirirBono()">
+                        <span class="glyphicon glyphicon-bookmark"></span>
+                        Adquirir</button>
                 </div>
             </div>
         </div>
