--- a/src/app/bonds/consultar/consultarBonos.component.html
+++ b/src/app/bonds/consultar/consultarBonos.component.html
@@ -9,10 +9,14 @@
             <div class="container">
                     <div class="form-group row">
                 <div class="col-md-2 col-sm-offset-1">
-                    <button type="button" id="emitidos" name="emitidos" (click)="find('emitidos')" class="btn btn-primary pull-right">Bonos disponibles</button>
+                    <button type="button" id="emitidos" name="emitidos" (click)="find('emitidos')" class="btn btn-primary pull-right">
+                        <span class="glyphicon glyphicon-edit"></span>
+                        Bonos disponibles</button>
                 </div>
                 <div class="col-md-2 col-sm-offset-1">
-                    <button type="button" id="adquiridos" name="adquiridos" (click)="find('adquiridos')" class="btn btn-primary pull-right">Bonos adquiridos</button>
+                    <button type="button" id="adquiridos" name="adquiridos" (click)="find('adquiridos')" class="btn btn-primary pull-right">
+                        <span class="glyphicon glyphicon-bookmark"></span>
+                        Bonos adquiridos</button>
                 </div>
             </div>
             </div>
@@ -43,7 +47,8 @@
                                     <td *ngIf="option === 'adquiridos'">
                                         {{bond.putDate | date:'shortDate'}}
                                     </td>
-                                    <td>{{bond.amount}}</td>
+                                    <td>{{"$ " + bond.amount  }}</td>
+                                    <!-- <td>{{"$ " + bond.amount}}</td> -->
                                     <td>{{bond.status}}</td>
                                     <td *ngIf="option === 'adquiridos'">
                                         {{bond.moneyLenderId}}
