--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,16 +19,16 @@
 
                     <li>
                         <a (click)="misBonos()">
-                            <span class="glyphicon glyphicon-gift"></span> Mis Bonos</a>
+                            <span class="glyphicon glyphicon-tags"></span> Mis Bonos</a>
                     </li>
                     <li>
                         <a (click)="emitirBono()">
-                            <span class="glyphicon glyphicon-pencil"></span> Emitir Bono</a>
+                            <span class="glyphicon glyphicon-check"></span> Emitir Bono</a>
                     </li>
                   
                     <li>
                         <a (click)="consultarBonos()">
-                            <span class="glyphicon glyphicon-link"></span> Consultar Bonos</a>
+                            <span class="glyphicon glyphicon-search"></span> Consultar Bonos</a>
                     </li>
                     <!--<li>
                         <a (click)="pagarBonos()">
