labels de tablas

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
     <div class="container text-center row">
 
         <div class="col-md-6" style="top:30px;">
-            <img src="../../i-o.jpg">
+            <img src="../../I-O.jpg">
         </div>
         <div class="col-md-6" data-ember-action="2" style="top:150px">
             <div>
