--- a/src/app/bonds/adquirir/adquirirBono.component.html
+++ b/src/app/bonds/adquirir/adquirirBono.component.html
@@ -6,7 +6,7 @@
             
             <div class="form-group">
                 {{labels.adquirirBono.fecha}}
-                <input type="datetime" class="form-control" id="fecha" name="fecha" [ngModel]="bond.creationDate | date:'shortDate'" placeholder="Fecha" readonly>
+                <input type="datetime" class="form-control" id="fecha" name="fecha" [ngModel]="bond.creationDate | date:'yyyy-MM-dd HH:mm:ss'" placeholder="Fecha" readonly>
             </div>
             <div class="form-group">
                 {{labels.adquirirBono.valor}}
