--- a/src/app/bonds/emitir/emitirBono.component.html
+++ b/src/app/bonds/emitir/emitirBono.component.html
@@ -5,7 +5,7 @@
             <h3 style="margin-bottom: 25px; text-align: center;">Emitir Bono</h3>
             <div class="form-group">
                 {{labels.emitirBono.fecha}}
-                <input type="datetime" class="form-control" id="fecha" name="fecha" [ngModel]="bond.creationDate | date:'shortDate'" placeholder="Fecha" readonly>
+                <input type="datetime" class="form-control" id="fecha" name="fecha" [ngModel]="bond.creationDate | date:'yyyy-MM-dd HH:mm:ss'" placeholder="Fecha" readonly>
             </div>
             <div class="form-group">
                 {{labels.emitirBono.valor}}
