--- a/src/app/bonds/consultar/consultarBonos.component.html
+++ b/src/app/bonds/consultar/consultarBonos.component.html
@@ -7,18 +7,18 @@
             <h3 style="margin-bottom: 25px; text-align: center;">Consultar Bonos - {{option}}</h3>
 
             <div class="container">
-                    <div class="form-group row">
-                <div class="col-md-2 col-sm-offset-1">
-                    <button type="button" id="emitidos" name="emitidos" (click)="find('emitidos')" class="btn btn-primary pull-right">
-                        <span class="glyphicon glyphicon-edit"></span>
-                        Bonos disponibles</button>
+                <div class="form-group row">
+                    <div class="col-md-2 col-sm-offset-1">
+                        <button type="button" id="emitidos" name="emitidos" (click)="find('emitidos')" class="btn btn-primary pull-right">
+                            <span class="glyphicon glyphicon-edit"></span>
+                            Bonos disponibles</button>
+                    </div>
+                    <div class="col-md-2 col-sm-offset-1">
+                        <button type="button" id="adquiridos" name="adquiridos" (click)="find('adquiridos')" class="btn btn-primary pull-right">
+                            <span class="glyphicon glyphicon-bookmark"></span>
+                            Bonos adquiridos</button>
+                    </div>
                 </div>
-                <div class="col-md-2 col-sm-offset-1">
-                    <button type="button" id="adquiridos" name="adquiridos" (click)="find('adquiridos')" class="btn btn-primary pull-right">
-                        <span class="glyphicon glyphicon-bookmark"></span>
-                        Bonos adquiridos</button>
-                </div>
-            </div>
             </div>
 
 
@@ -36,6 +36,9 @@
                                 <th *ngIf="option === 'emitidos'">
                                     {{currentLabels.prestamista}}
                                 </th>
+                                <th *ngIf="option === 'adquiridos'">
+                                    {{currentLabels.fechaPago}}
+                                </th>
                                 <th *ngIf="option === 'adquiridos'">Pagar</th>
                                 <th *ngIf="option === 'emitidos'">Adquirir</th>
                             </thead>
@@ -47,20 +50,30 @@
                                     <td *ngIf="option === 'adquiridos'">
                                         {{bond.putDate | date:'yyyy-MM-dd HH:mm:ss'}}
                                     </td>
-                                    <td>{{"$ " + bond.amount  }}</td>
-                                    <!-- <td>{{"$ " + bond.amount}}</td> -->
+
+                                    <td>{{"$ " + bond.amount }}</td>
                                     <td>{{bond.status}}</td>
+                                    
                                     <td *ngIf="option === 'adquiridos'">
                                         {{bond.moneyLenderId}}
                                     </td>
                                     <td *ngIf="option === 'emitidos'">
                                         {{bond.moneyLenderId}}
                                     </td>
+                                    
+                                    <td *ngIf="option === 'adquiridos' && bond.status =='PAYMENT'">
+                                        {{bond.paymentDate | date:'yyyy-MM-dd HH:mm:ss'}}
+                                    </td>
+                                    <td *ngIf="option === 'adquiridos' && bond.status !=='PAYMENT'">
+                                        {{bond.creationDate | date:'yyyy-MM-dd HH:mm:ss'}}
+                                    </td>
                                     <td *ngIf="option === 'adquiridos'">
-                                        <a (click)="irPagar(bond)" *ngIf="bond.status !=='PAYMENT'" >Ir</a>
+                                        <a (click)="irPagar(bond)" *ngIf="bond.status !=='PAYMENT'" target="Ir a Pagar">
+                                            Ir
+                                        </a>
                                     </td>
                                     <td *ngIf="option === 'emitidos'">
-                                        <a (click)="irAdquirir(bond)">Adquirir</a>
+                                            <a (click)="irAdquirir(bond)" >Adquirir</a>
                                     </td>
                                 </tr>
                             </tbody>
