--- a/src/app/bonds/pagar/pagarBono.component.html
+++ b/src/app/bonds/pagar/pagarBono.component.html
@@ -15,7 +15,7 @@
             <li class="list-group-item">
               <span class="glyphicon glyphicon-paperclip" aria-hidden="true"></span> Interes: 10%</li>
             <li class="list-group-item">
-              <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Fecha: {{bond.creationDate | date:'yyyy-MM-dd HH:mm:ss'}}</li>
+              <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span> Fecha: {{bond.putDate | date:'yyyy-MM-dd HH:mm:ss'}}</li>
             <li class="list-group-item">
               <span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span> Total: {{totalPay}}</li>
           </ul>
